; ModuleID = '/home/carl/AnghaBench/sway/common/extr_util.c_parse_color.c'
source_filename = "/home/carl/AnghaBench/sway/common/extr_util.c_parse_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SWAY_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"Invalid color %s, defaulting to color 0xFFFFFFFF\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_color(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  %8 = load i8, i8* %7, align 1
  %9 = sext i8 %8 to i32
  %10 = icmp eq i32 %9, 35
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = getelementptr inbounds i8, i8* %12, i32 1
  store i8* %13, i8** %3, align 8
  br label %14

14:                                               ; preds = %11, %1
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @strlen(i8* %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp ne i32 %17, 6
  br i1 %18, label %19, label %26

19:                                               ; preds = %14
  %20 = load i32, i32* %4, align 4
  %21 = icmp ne i32 %20, 8
  br i1 %21, label %22, label %26

22:                                               ; preds = %19
  %23 = load i32, i32* @SWAY_DEBUG, align 4
  %24 = load i8*, i8** %3, align 8
  %25 = call i32 @sway_log(i32 %23, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i8* %24)
  store i32 -1, i32* %2, align 4
  br label %38

26:                                               ; preds = %19, %14
  %27 = load i8*, i8** %3, align 8
  %28 = call i32 @strtoul(i8* %27, i32* null, i32 16)
  store i32 %28, i32* %5, align 4
  %29 = load i8*, i8** %3, align 8
  %30 = call i32 @strlen(i8* %29)
  %31 = icmp eq i32 %30, 6
  br i1 %31, label %32, label %36

32:                                               ; preds = %26
  %33 = load i32, i32* %5, align 4
  %34 = shl i32 %33, 8
  %35 = or i32 %34, 255
  store i32 %35, i32* %5, align 4
  br label %36

36:                                               ; preds = %32, %26
  %37 = load i32, i32* %5, align 4
  store i32 %37, i32* %2, align 4
  br label %38

38:                                               ; preds = %36, %22
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @sway_log(i32, i8*, i8*) #1

declare dso_local i32 @strtoul(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
